# tla-populate

./: .dockerignore  .env.template  Dockerfile  docker-compose.yml  pyproject.toml  setup.py
tla_ingest/: __init__.py  populate_tla.py
