[tool.poetry]
name = "tla-ingest"
version = "0.1.0"
description = "Simple Python script for uploading a TLA corpus dump into a running TLA ES backend"
authors = ["Jakob Hoeper <JKatzwinkel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
docopt = "^0.6.2"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

